# caffe_deploy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  update_proto.sh
include/: glog_deploy.hpp
include/caffe/: blob.hpp  common.hpp  layer.hpp  layer_factory.hpp  net.hpp  syncedmem.hpp
include/caffe/layers/: concat_layer.hpp  cudnn_conv_layer.hpp  cudnn_lcn_layer.hpp  cudnn_lrn_layer.hpp  cudnn_pooling_layer.hpp  cudnn_softmax_layer.hpp  flatten_layer.hpp  reshape_layer.hpp  slice_layer.hpp  split_layer.hpp
include/caffe/test/: test_caffe_main.hpp  test_gradient_check_util.hpp
include/caffe/util/: benchmark.hpp  cudnn.hpp  glog_deploy.hpp  io.hpp  math_functions.hpp  mkl_alternate.hpp  rng.hpp
src/caffe/: blob.cpp  common.cpp  layer.cpp  layer_factory.cpp  net.cpp  syncedmem.cpp
src/caffe/layers/: absval_layer.cpp  batch_norm_layer.cpp  bias_layer.cpp  bnll_layer.cu  concat_layer.cpp  concat_layer.cu  conv_layer.cpp  cudnn_conv_layer.cpp  cudnn_lcn_layer.cpp  cudnn_lrn_layer.cpp  cudnn_pooling_layer.cpp  cudnn_relu_layer.cpp  cudnn_sigmoid_layer.cpp  cudnn_softmax_layer.cpp  cudnn_tanh_layer.cpp  deconv_layer.cpp  euclidean_loss_layer.cpp  exp_layer.cpp  filter_layer.cpp  im2col_layer.cpp  inner_product_layer.cpp  log_layer.cpp  lrn_layer.cu  mvn_layer.cpp  power_layer.cpp  prelu_layer.cpp  recurrent_layer.cpp  reduction_layer.cpp  reshape_layer.cpp  scale_layer.cpp  sigmoid_cross_entropy_loss_layer.cpp  silence_layer.cpp  slice_layer.cpp  slice_layer.cu  split_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/test/: test_benchmark.cpp  test_caffe_main.cpp  test_convolution_layer.cpp  test_dummy_data_layer.cpp  test_im2col_kernel.cu  test_inner_product_layer.cpp  test_layer_factory.cpp  test_net.cpp  test_neuron_layer.cpp  test_platform.cpp  test_reduction_layer.cpp  test_slice_layer.cpp  test_util_blas.cpp
src/caffe/util/: benchmark.cpp  io.cpp  math_functions.cpp  math_functions.cu
